# rdza

./: .gitignore  README.md  Rdza.cf  rdza.cabal  stack.yaml
app/: Interpreter.hs  Main.hs  ParRdza.hs  ParRdza.y  TestRdza  TestRdza.hs
bad/: bad_arg_number.rdza  bad_arg_type.rdza  bad_return_from_function.rdza  if_else_braches_dont_agree.rdza  print_type_error.rdza  str_concat_type_error.rdza  trying_to_call_non_function.rdza  trying_to_change_type_of_declared_var.rdza  type_errors_in_arithmetic.rdza  unknown_function.rdza  unknown_ident.rdza  zero_division.rdza
examples/: e1.rdza  e2.rdza  e3.rdza
good/: factorial.rdza  gcd_loop.rdza  gcd_recursive.rdza
src/: AbsRdza.hs.bak  DocRdza.txt.bak  ExecRdza.hs  Interpreter.hs  LexRdza.hs  LexRdza.x  Makefile  ParRdza.hs  ParRdza.y  PrintRdza.hs.bak  Rdza.cf  SkelRdza.hs.bak  Spec.hs  TestRdza  TestRdza.hs  TestRdza.hs.bak  foo.js  interpreter
test/: Spec.hs
