name:                rdza
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/rdza#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2017 Author name here
category:            Web
build-type:          Simple
extra-source-files:  README.md
--                     src/LexRdza.x
--                     src/ParRdza.y
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
  build-depends:       base >= 4.7 && < 5
  default-language:    Haskell2010

executable rdza-exe
  hs-source-dirs:      app
  main-is:             TestRdza.hs
  other-modules:       AbsRdza
                     , ErrM
                     , LexRdza
                     , ParRdza
                     , PrintRdza
                     , SkelRdza
                     , Interpreter
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , array
                     , containers
                     , mtl
  default-language:    Haskell2010

test-suite rdza-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , rdza
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/rdza
